--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,18 @@
 body {
   background: #202020;
   margin: 0;
+
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
+}
+
+h1 {
+  margin: 0;
+  margin-bottom: 8px;
+
+  font-size: medium;
+  cursor: pointer;
+  color: white;
 }
 
 #controls {
@@ -17,6 +28,7 @@ body {
   bottom: 0;
   left: 0;
   overflow: hidden;
+  cursor: grab;
 }
 
 #content {
