--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,9 @@ body {
   background: #202020;
   margin: 0;
 
+  overflow: hidden;
+  overscroll-behavior-x: none;
+
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
 }
